# ronzz-CDN-2

France/Stato-Franca/paperoj/: proceduroj.avif
France/municipoj/Metz/: Metz.md
UFR-MIM/: TD-elektromagnetismo-1-coulomb.md  TD-matematiko-1.md  matematiko-TD-1.md
UFR-MIM/informoj/: 0-L1-SPI-informoj.md  0-L1-SPI-informoj.md.bak  0-studenta-vivo-Metz-Technopole.md  0-studenta-vivo-Metz-Technopole.md.bak
UFR-MIM/kurso/NUMOC/: Document structure-2.docx  Exercice_1.xlsx  Exercice_1MODIF.ods  Exercice_1MODIF.xlsx  Graphique avec axe double.ods  Graphique avec axe double.xlsx
UFR-MIM/kurso/fizika-L1/: .~lock.elektro-1.odp#
UFR-MIM/kurso/industria-komputiko/: arduino-projektoj  labirinto-CLI.tar.xz
UFR-MIM/kurso/industria-komputiko/Pyfirmata-basic/: pyproject.toml
UFR-MIM/kurso/industria-komputiko/Pyfirmata-basic/src/: LED.py  diagnozoj.py
UFR-MIM/kurso/matematiko/: TD-matematiko-2.md
UFR-MIM/kurso/pasema-cirkvito/: Cours_GRAFCET_L1_EEA.ppt
UFR-MIM/kurso/profesia-projekto_PPP/: .~lock.prezento-PPP.pptx#  prezento-PPP.pptx  submetigo
UFR-MIM/kurso/robotiko/: robotiko-101-eo.md
fizika/: fizika-latex.fdb_latexmk  fizika-latex.fls
fizika/fizika-latex/: analizo-fortoj-millikan.tex  fizika-latex.fdb_latexmk  fizika-latex.fls  lumo.aux  lumo.fdb_latexmk  lumo.fls  lumo.tex
koda-ronzz-org/: specifo.md  todo.md
koda-ronzz-org/artikoloj/referenco/: git-referenco.md
komputiko/: kirurgia-roboto.avif
midimonde/: midimonde-pri.md
persono/: John-Coltrane.avif
skriptoj/komputilaj-iloj/: itom-instalajo.bash
verkado/latex/: ex-skeleto.tex
(+30 files in other folders)
