[project]
name = "pyfirmata-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Rong Zhou",email = "ron@ronzz.org"}
]
license = {text = "AGPL3.0"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pyfirmata2 (>=2.5.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pyfirmata_basic", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
